fixed the color on smaller screens

--- a/js/assets/style.less
+++ b/js/assets/style.less
@@ -507,7 +507,7 @@ header .text {
 		float: none;
 	}
 	body, html {
-		background-color: purple;
+		/*background-color: purple;*/
 	}
 }
 @media screen and (max-width: 500px){
@@ -518,7 +518,7 @@ header .text {
 		/*display: block;*/
 	}
 	body, html {
-		background-color: olive;
+		/*background-color: olive;*/
 	}
 
 }	
